tdf#168446 Unique name for images and better image representation

Change-Id: Icff3556ed179b1a6ae7ad11583b752e77ea747ec
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/191102
Tested-by: Jenkins
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>